load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "interface.go",
    ],
    importpath = "sigs.k8s.io/cloud-provider-azure/pkg/azureclients/armclient/mockarmclient",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/azureclients/armclient:go_default_library",
        "//pkg/retry:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest:go_default_library",
        "//vendor/github.com/Azure/go-autorest/autorest/azure:go_default_library",
        "//vendor/github.com/golang/mock/gomock:go_default_library",
    ],
)
