load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "interface.go",
    ],
    importpath = "sigs.k8s.io/cloud-provider-azure/pkg/azureclients/deploymentclient/mockdeploymentclient",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/retry:go_default_library",
        "//vendor/github.com/Azure/azure-sdk-for-go/services/resources/mgmt/2017-05-10/resources:go_default_library",
        "//vendor/github.com/golang/mock/gomock:go_default_library",
    ],
)
